--- a/templates/default/keepalived_haproxy.conf.erb
+++ b/templates/default/keepalived_haproxy.conf.erb
@@ -18,10 +18,10 @@ global_defs {
 <% node.keepalived.vrrp_instances.each do |instance| %>
 vrrp_instance <%= instance["name"] %> {
     interface <%= instance["interface"] %>
-    state <%= instance["state"] %>
+    state <%= (instance["backup_nodes"].include? node.name) ? "BACKUP" : "MASTER" %>
     virtual_router_id <%= instance["virtual_router_id"] %>
     <% if instance["nopreempt"] %>nopreempt<% end %>
-    priority <%= instance["priority"] %> 
+    priority <%= (instance["backup_nodes"].include? node.name) ? instance["backup_priority"] : instance["master_priority"] %> 
     <% if instance["advert_int"] %>advert_int <%= instance["advert_int"] %><%end%>
     virtual_ipaddress {
     <% instance["virtual_ipaddress"].each do |addr| %>
